# Nagi

./: .gitignore  CONTRIBUTING.md  README.md
.claude/skills/nagi-pr/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: discussion.md  task.md
.github/workflows/: rust_ci.yaml  validate_issue_title.yaml
android/: build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/io/github/muji4/nagi/: MainActivity.kt
docs/: 00_Research.md  01_Background.md  02_PRD_NagiTime.md  03_DD_NagiTime.md
hack/: build-rust-android.sh  prefix.yaml  validate_issue_title.sh  validate_pr.sh
rust/: Cargo.toml
rust/core/: Cargo.toml
rust/core/src/: lib.rs  palette.rs
rust/ffi/: Cargo.toml
rust/ffi/src/: lib.rs
