# Nagi の Rust サブツリー（規則の層）の Cargo workspace。
# 規則（core）と、将来の FFI 公開層（ffi）を束ねる。プラットフォーム別アプリ
# （android/・後の ios/）は、ここで生成される .so とバインディングを消費する。
[workspace]
resolver = "3"
members = ["core", "ffi"]

# リリースビルドのサイズ最適化（Quiet Architecture: 小さく・省電力に）。
# panic = "abort" は付けない（UniFFI が FFI 境界で panic を捕捉するのに unwind が要るため）。
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
